# adi_gpu_vulkan

./: Cargo.toml  README.md  build-shaders.sh  build-vulkan-shaders.sh  changelog.md
src/: lib.rs
src/renderer/: mod.rs
src/renderer/ffi/: create_surface.rs  mod.rs  vulkan.rs
src/shaders/glsl/: complex-frag.glsl  complex-vert.glsl  faded-frag.glsl  faded-vert.glsl  gradient-frag.glsl  gradient-vert.glsl  solid-frag.glsl  solid-vert.glsl  texture-bfrag.glsl  texture-frag.glsl  texture-vert.glsl  tinted-frag.glsl  tinted-vert.glsl
