# "adi_gpu_vulkan" crate - Licensed under the MIT LICENSE
#  * Copyright (c) 2018  Jeron A. Lau <jeron.lau@plopgrizzly.com>
#                             _        _
#                            /@\——————/@\
# .———  .                   |   o    o   |     .————      .            .
# |   | |  .———   .———   .——.     []     .——.  |      .——    ———: ———: | .   .
# |   | |  |   |  |   |  \   \   <##>   /   /  |      |   |    /    /  | |   |
# |———  |  |   |  |   |   |   ¯        ¯   |   |   -- |   |   /    /   |  \ /
# |     |  |   |  |———    |                |   |    | |   |  /    /    |   |
# |     |   ———   |       |                |    ————  |   | :——— :———  |   |
#                 |        \              /                              __/
#                           ¯————————————¯

[package]
name = "adi_gpu_vulkan"
version = "0.5.3"
authors = [
	"Jeron A. Lau <jeron.lau@plopgrizzly.com>"
]

license = "MIT"
documentation = "https://docs.rs/adi_gpu_vulkan"
homepage = "http://plopgrizzly.com/adi_gpu_vulkan"
repository = "https://github.com/plopgrizzly/adi_gpu_vulkan"

readme = "README.md"
description = "Vulkan implementation for adi_gpu"
keywords = [ "vulkan", "graphics", "gui", "hardware", "rendering" ]
categories = ["gui", "game-engines", "hardware-support", "multimedia::video",
	"rendering::graphics-api"]

exclude = [
	"examples/*", "code_of_conduct.md", "contributing.md", ".gitignore",
	"_config.yml", "issue_template.md", "icon.png", "icon.ico"
]

[dependencies]
adi_gpu_base = "0.6"
asi_vulkan = "0.7"
ami = "0.8"
libc = "0.2" # TODO: Remove dependency by having all ffi code in asi crates.